--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todoapp",
   "version": "1.0.0",
   "description": "todoapp",
-  "main": "server/server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
